--- a/slides.tex
+++ b/slides.tex
@@ -1,4 +1,4 @@
-\documentclass{SUSTechBeamer}
+\documentclass[aspectratio=169]{SUSTechBeamer}
 \usetheme{Malmoe}
 \title{Journey to \LaTeX}
 \subtitle{An introduction to the typesetting system}
