--- a/slides.tex
+++ b/slides.tex
@@ -20,7 +20,10 @@
 
 \setbeamertemplate{footline}[\defaultfoot]
 \begin{frame}
+    %&&& show subsections in contents
     \tableofcontents
+    %&&& hide subsections
+    % \tableofcontents[hideallsubsections]
 \end{frame}
 \setbeamertemplate{headline}[\defaulthead]
 
